--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
         <li><a htef="">Studio</a></li>
         <li><a htef="">Portfolio</a></li>
         <li><a htef="">Contacts</a></li>
-        <p><a htef="">info@devstudio.com</a></p>
-        <p><a htef="">+11 (000) 111-11-11</a></p>
+        <address>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a href="tel:+11112223344">+1(111) 222-33-44</a>
+        </address>
     </ul>
     </nav>
     <h1>Effective Solutions
@@ -41,10 +43,25 @@
 
 <h6 class="main-page-text-Team">Our Team</h6>
 </div>
-<img src="./image/Team Card 1.png" alt="Mark">
-<img src="./image/Team Card 2.png" alt="Tom">
-<img src="./image/Team Card 3.png" alt="Camila">
-<img src="./image/Team Card 4.png" alt="DAniel">
+<img src="./image/Team-Card-1.png" alt="Mark">
+<img src="./image/Team-Card-2.png" alt="Tom">
+<img src="./image/Team-Card-3.png" alt="Camila">
+<img src="./image/Team-Card-4.png" alt="DAniel">
+</main>
+<footer>
+<a href="">Web Studio</a>
+<p>
+    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+</p>
+</footer>
+
+
+
+
+
+</nav>
+
+
 
 </div>
 
