--- a/index.html
+++ b/index.html
@@ -10,63 +10,66 @@
 
 <header>
     <nav>
-    <a href="">Web Studio</a>
+    <a href="./index.html">WebStudio</a>
     <ul>
-        <li><a htef="">Studio</a></li>
-        <li><a htef="">Portfolio</a></li>
-        <li><a htef="">Contacts</a></li>
+        <li><a-href="">Studio</a></li>
+        <li><a-href="">Portfolio</a></li>
+        <li><a-href="">Contacts</a></li>
+    </ul>
+    <ul>
         <address>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            <a href="tel:+11112223344">+1(111) 222-33-44</a>
+            <a-href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a-href="tel:+11112223344">+1(111) 222-33-44</a>
         </address>
     </ul>
     </nav>
-    <h1>Effective Solutions
-    for Your Business</h1>
-    <button class="main-page-btn" id="go-to-form-btn">
-        Order Service
-    </button>
+    </header>
+   
+    <main>
+        <h1>Effective Solutions
+            for Your Business</h1>
+        <button class="main-page-btn" id="go-to-form-btn">
+            Order Service
+        </button>
+        
+    </main>
+    <main>
+    <h2></h2>
     <ul>
-    <h2 class="main-page-text-Str">Strategy</h2>
-    <p class="main-page-text-ds">Our goal is to identify the business
-    problem to walk away with the perfect and creative solution.
-    </p>
-    <h3 class="main-page-text-Pun">Punctuality</h3>
-    <p class="main-page-text-ds">Bring the key message to the brand's audience for the best price within the shortest possible time.
-    </p>
-<h4 class="main-page-text-dil">Diligence</h4>
-<p class="main-page-text-ds">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.
-</p>
-<h5 class="main-page-text-Tech">Technologies</h5>
-<p class="main-page-text-ds">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.
-</p>
-
-<h6 class="main-page-text-Team">Our Team</h6>
-</div>
-<img src="./image/Team-Card-1.png" alt="Mark">
-<img src="./image/Team-Card-2.png" alt="Tom">
-<img src="./image/Team-Card-3.png" alt="Camila">
-<img src="./image/Team-Card-4.png" alt="DAniel">
-</main>
-<footer>
-<a href="">Web Studio</a>
-<p>
-    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
-</p>
-</footer>
-
-
-
-
-
-</nav>
-
-
-
-</div>
-
+        <li>
+            <h3>Strategy</h3>
+            <p>Our goal is to identify the business
+                problem to walk away with the perfect and creative solution.</p>
+        </li>
+        <li>
+            <h3>Punctuality</h3>
+            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+        </li>
+        <li>
+            <h3>Diligence</h3>
+            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+        </li>
+        <li>
+            <h3>Technologies</h3>
+            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+        </li>
     </ul>
-</header>
+    
+    <h2></h2>
+    <li><img src="image/Team-Card-1.png" alt="Mark"></li>
+    <li><img src="image/Team-Card-2.png" alt="Tom"></li>
+    <li><img src="image/Team-Card-3.png" alt="Camila"></li>
+    <li><img src="image/Team-Card-4.png" alt="Daniel"></li>
+    </main>
+    <footer>
+        <a href="/index.html">Web Studio</a>
+        <p>
+            Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+        </p>
+    </footer>
+</nav>
+</div>
+
 <main>
 <section></section>
 <section></section>
