--- a/index.html
+++ b/index.html
@@ -11,17 +11,24 @@
 
 <header>
     <nav>
-    <a href="./index.html">WebStudio</a>
+    <a-href="./index.html">WebStudio
+
+    </a>
     <ul>
-        <li><a-href="">Studio</a></li>
-        <li><a-href="">Portfolio</a></li>
-        <li><a-href="">Contacts</a></li>
+        <li><a-href="">Studio</a>
+        </li>
+        <li><a-href="">Portfolio</a>
+        </li>
+        <li><a-href="">Contacts</a>
+        </li>
         
     </ul>
     </nav>
     <address>
-        <li><a-href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a-href="tel:+11112223344">+1(111) 222-33-44</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li><a href="tel:+11112223344">+1(111) 222-33-44</a>
+        </li>
     </address>
     </header>
    
