--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 
 <header>
     <nav>
-    <a-href="./index.html">WebStudio
+    <a href="./index.html">WebStudio
 
     </a>
     <ul>
-        <li><a-href="">Studio</a>
+        <li><a href="./index.html">Studio</a>
         </li>
-        <li><a-href="">Portfolio</a>
+        <li><a href="./index.html">Portfolio</a>
         </li>
-        <li><a-href="">Contacts</a>
+        <li><a href="./index.html">Contacts</a>
         </li>
         
     </ul>
