--- a/index.html
+++ b/index.html
@@ -67,24 +67,24 @@
     <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p></li>
     </ul>
 
-    <h2>Our Team</h2>
-    <ul>
-    <li><img src="image/img (1).png" alt="Mark">
+    <h2>OurTeam</h2>
+     <ul>
+    <li><img src="image/img (1).jpg" alt="Mark">
     <h3>Mark Guerrero</h3>
 <p>Product Designer</p></li>
-    <li><img src="image/img (2).png" alt="Tom">
+    <li><img src="image/img (2).jpg" alt="Tom">
     <h3>Tom Ford</h3>
 <p>Frontend Developer</p></li>
-    <li><img src="image/img (3).png" alt="Camila">
+    <li><img src="image/img (3).jpg" alt="Camila">
     <h3>Camila Garcia</h3>
 <p>Marketing</p></li>
-    <li><img src="image/img (4).png" alt="Daniel">
+    <li><img src="image/img (4).jpg" alt="Daniel">
     <h3>Daniel Wilson</h3>
 <p>UI Designer</p></li>
     </ul>
 </main>
 <a href="/index.html">WebStudio</a>
 <p>
-    Increase the flow of customers and sales for your business with digital marketing & growth solutions.
+Increase the flow of customers and sales for your business with digital marketing & growth solutions.
 </p>
 </html>
