--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <a href="./index.html">WebStudio</a>
     <ul>
     <li>
-         <a href="./index.html">Studio</a>
+         <a href="">Studio</a>
         </li>
     <li>
-         <a href="./index.html">Portfolio</a>
+         <a href="">Portfolio</a>
         </li>
     <li>
-         <a href="./index.html">Contacts</a>
+         <a href="">Contacts</a>
         </li>
         
     </ul>
@@ -29,7 +29,7 @@
         <ul>
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 
-        <li><a href="tel:+11112223344">+1(111) 222-33-44</a></li>
+        <li><a href="tel:+11112223344">+11 (000) 111-11-11</a></li>
         </ul>
     </address>
     </header>
