--- a/index.html
+++ b/index.html
@@ -69,19 +69,19 @@
     <h2>Our Team </h2>
      <ul>
     <li>
-        <img src="/image/img1.jpg" width="264" alt="Mark">
+        <img src="./image/img1.jpg" width="264" alt="Mark">
     <h3>Mark Guerrero</h3>
 <p>Product Designer</p></li>
     <li>
-        <img src="/image/img2.jpg" width="264" alt="Tom">
+        <img src="./image/img2.jpg" width="264" alt="Tom">
     <h3>Tom Ford</h3>
 <p>Frontend Developer</p></li>
     <li>
-        <img src="/image/img3.jpg" width="264" alt="Camila">
+        <img src="./image/img3.jpg" width="264" alt="Camila">
     <h3>Camila Garcia</h3>
 <p>Marketing</p></li>
     <li>
-        <img src="/image/img4.jpg" width="264" alt="Daniel">
+        <img src="./image/img4.jpg" width="264" alt="Daniel">
     <h3>Daniel Wilson</h3>
 <p>UI Designer</p></li>
     </ul>
